# pollard-kangaroo

./: Cargo.toml  README.md
benches/: dlp_algorithms.rs  ec_operations.rs  kangaroo.rs
scripts/: regenerate_bl12_table.sh  regenerate_bsgs_tables.sh  regenerate_dl_tables.sh  regenerate_tbsgs_k_table.sh  table-sizes.sh  test_bl12_for_all_16bit.sh
src/: bsgs.rs  bsgs_batched.rs  kangaroo.rs  lib.rs  traits.rs  utils.rs
src/bl12/: generator.rs  mod.rs  precomputed_tables.rs  presets.rs  solver.rs
src/bl12/rsc/: table_32
src/bsgs/: generator.rs  mod.rs  precomputed_tables.rs  presets.rs  solver.rs
src/bsgs/rsc/: table_32
src/bsgs_batched/: generator.rs  mod.rs  presets.rs  solver.rs  solver_old_broken.rs
src/bsgs_k/: generator.rs  mod.rs  precomputed_tables.rs  presets.rs  solver.rs
src/bsgs_k/rsc/: table_32
src/kangaroo/: generator.rs  solver.rs
src/naive_doubled_lookup/: mod.rs
src/naive_lookup/: mod.rs  precomputed_tables.rs
src/naive_lookup/rsc/: table_16
src/naive_truncated_doubled_lookup/: mod.rs
src/tbsgs_k/: mod.rs  precomputed_tables.rs
src/tbsgs_k/rsc/: table_32
tests/: bl12_tests.rs  dlog_solver_tests.rs  dlog_with_precomputed_tables.rs  dlog_without_precomputation.rs  kangaroo_tests.rs
